# python-pytest

./: .flake8  .isort.cfg  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml
python_pytest/: db_interaction.py  exceptions.py  fixtures.py  gen_data.py  logging.py  mocking.py  properties.py
tests/: conftest.py  test_basics.py  test_db_interaction.py  test_exceptions.py  test_fixtures.py  test_gen_data.py  test_logging.py  test_mocking.py  test_parametrized.py  test_properties.py
