[tool.poetry]
name = "python-pytest"
version = "0.1.0"
description = ""
authors = ["Li Yan <twotwo.li@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
sqlalchemy = "^1.4.22"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-sugar = "^0.9.4"
hypothesis = "^5.46.0"
faker = "^5.4.0"
pytest-cov = "^2.10.1"
pytest-picked = "^0.4.6"
isort = "^5.9.3"
black = "^21.7b0"
flake8 = "^3.9.2"
mypy = "^0.910"
pre-commit = "^2.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[[tool.poetry.source]]
name = "private"
url = "https://mirrors.aliyun.com/pypi/simple"
default = true